--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.2+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,7 +38,7 @@ dependencies:
   syncfusion_flutter_pdf: ^18.4.43-beta.1
   open_file: ^3.0.3
   path_provider: ^2.0.1
-  permission_handler: ^5.1.0+2
+#  permission_handler: ^5.1.0+2
   path_provider_ex: ^1.0.1
   shared_preferences: ^2.0.4
   flutter_spinkit: ^5.0.0
@@ -57,6 +58,8 @@ dependencies:
   firebase_messaging: ^8.0.0-dev.15
   flutter_local_notifications: ^4.0.1+2
   flutter_restart: ^0.0.3
+  hand_signature: ^2.0.0
+  get:
 
 
 dev_dependencies:
